RESOLVED FIXED311042
[Debug] WebKitTestRunner crashes during model-related runs
https://bugs.webkit.org/show_bug.cgi?id=311042
Summary [Debug] WebKitTestRunner crashes during model-related runs
Aleksei Marchenko
Reported 2026-03-29 17:30:49 PDT
Stack trace: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x118e965bc WTFCrash + 0 1 JavaScriptCore 0x118e9661c WTFCrashWithSecurityImplication + 12 2 WebKit 0x138b819fc WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int, std::__1::atomic<bool>, (WTF::CheckedPtrDeleteCheckException)0>::~CanMakeCheckedPtrBase() + 132 (CheckedRef.h:365) 3 WebKit 0x13b1a0e90 WTF::CanMakeThreadSafeCheckedPtr<IPC::Connection::Client, (WTF::DefaultedOperatorEqual)0, (WTF::CheckedPtrDeleteCheckException)0>::~CanMakeThreadSafeCheckedPtr() + 28 4 WebKit 0x13b18f6cc IPC::Connection::Client::~Client() + 32 5 WebKit 0x13c20f150 WebKit::AuxiliaryProcessProxy::~AuxiliaryProcessProxy() + 600 6 WebKit 0x13c815268 WebKit::ModelProcessProxy::~ModelProcessProxy() + 52 7 WebKit 0x13c815294 WebKit::ModelProcessProxy::~ModelProcessProxy() + 28 8 WebKit 0x13c8152f8 WebKit::ModelProcessProxy::~ModelProcessProxy() + 28 9 WebKit 0x138bd1e90 WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const::'lambda'()::operator()() const + 60 10 WebKit 0x138bd1e1c WTF::Detail::CallableWrapper<WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const::'lambda'(), void>::call() + 28 11 JavaScriptCore 0x118ecccd4 WTF::Function<void ()>::operator()() const + 148 12 JavaScriptCore 0x118f57964 WTF::ensureOnMainRunLoop(WTF::Function<void ()>&&) + 36 13 WebKit 0x138bd1b34 WTF::ThreadSafeRefCounted<WebKit::AuxiliaryProcessProxy, (WTF::DestructionThread)2>::deref() const + 72
Attachments
Aleksei Marchenko
Comment 1 2026-03-29 18:03:26 PDT
Aleksei Marchenko
Comment 2 2026-03-29 18:04:15 PDT
EWS
Comment 3 2026-03-30 09:35:01 PDT
Committed 310237@main (ea544ba94313): <https://commits.webkit.org/310237@main> Reviewed commits have been landed. Closing PR #61639 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.