[Debug] WebKitTestRunner crashes during model-related runs

https://bugs.webkit.org/show_bug.cgi?id=311042
rdar://173646341

Reviewed by Etienne Segonzac and Mike Wyrzykowski.

ModelProcessProxy is missing the WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR
macro, which is required for classes that participate in checked pointer
tracking.

* Source/WebKit/UIProcess/Model/ModelProcessProxy.h:

Canonical link: https://commits.webkit.org/310237@main